[acnh] Improve critter tabs and menu sizing, fix flex overflow issues

--- a/animal_crossing/style.css
+++ b/animal_crossing/style.css
@@ -2,7 +2,7 @@ body {
   /* background-color: #4e99ea; */
   background-color: #57d5b1;
   font-family: "Open Sans";
-  font-size: 20px;
+  font-size: max(2vh, 20px);
   margin: 0px;
   display: flex;
   flex-direction: column;
@@ -30,7 +30,6 @@ body {
 #login-form > button {
   margin: 0.5vh;
   padding: 7px 15px;
-  font-size: max(2vh, 20px);
   min-height: 50px;
   min-width: 250px;
   height: 5vh;
@@ -67,14 +66,14 @@ body {
   z-index: 1;
   color: white;
   text-align: center;
-  font-size: 14px;
+  font-size: max(14px, 1.5vh);
   order: 1;
   flex-direction: row;
 }
 
 .menu img {
-  width: 30px;
-  height: 30px;
+  width: max(30px, 4vh);
+  height: max(30px, 4vh);
 }
 
 .menu > div {
@@ -91,7 +90,7 @@ body {
 }
 
 #context-menu-icon {
-  padding: 5px;
+  padding: 5px max(5px, 2vw);
   flex-grow: 0;
   order: 1;
 }
@@ -121,7 +120,10 @@ body {
 
 #main-content {
   width: 100%;
-  height: calc(100vh - 70px);
+  overflow: auto;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .active-menu-item {
@@ -158,7 +160,6 @@ body {
 .header {
   display: flex;
   box-shadow: 0 -3px 10px black;
-  height: 50px;
 }
 
 .tab {
@@ -166,7 +167,7 @@ body {
   text-align: center;
   background-color: #3598bf;
   color: #addeea;
-  padding: 10px;
+  padding: max(1.75vh, 10px);
 }
 
 .tab:not(.active-tab):hover {
@@ -325,6 +326,7 @@ input[data-attr-name="donated"] + .icon {
 
   #context-menu-icon {
     order: 0;
+    padding: 5px 10px;
   }
 
   #context-menu {
